# mesh-rs

./: Cargo.toml  Readme.md
src/: chain.rs  main.rs  node.rs  utils.rs
src/node/: behaviour.rs  mod.rs  order_sync.rs  transport.rs
src/node/behaviour/: discovery.rs  mod.rs  pubsub.rs
src/node/behaviour/order_sync/: json_codec.rs  messages.rs  mod.rs
test/: response.json
