[package]
name = "mesh"
version = "0.1.0"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"
build = "build.rs"
homepage = "https://github.com/0xProject/mesh-rs/"
repository = "https://github.com/0xProject/mesh-rs/"
description = "0x Mesh node in rust"
readme = "Readme.md"

[features]
features = [ "bench" ]
bench = [ "criterion" ]

[lib]
path = "src/main.rs"

[[bench]]
name = "criterion"
harness = false
required-features = ["bench"]

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
futures = "0.3"
libp2p = { version = "0.32", features = [ "tcp-tokio" ] }
libp2p-secio = "0.25"
log = "0.4"
tokio = { version = "0.3", features = ["macros", "rt-multi-thread", "signal", "io-std", "io-util"] }
tokio-compat-02 = "0.1"
structopt = "0.3"
criterion = { version = "0.3", optional = true }
async-trait = "0.1.42"

[dev-dependencies]
proptest = "0.10"
float_eq = "0.5"
pretty_assertions = "0.6"
criterion = "0.3"

[build-dependencies]
anyhow = "1.0"
chrono = "0.4"

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
